# gedcom-parse

./: AUTHORS  GNUmakefile.am  GNUmakefile.in  Makefile  Makefile.in  Makefile.inc  README  README.md  aclocal.m4  confdefs.h  config.h.in  configure  configure.in  gedcom-config.in  testgedcom  testgedcom.symbols.txt
data/: Makefile.am
doc/: gom.html  gomxref.html  index.html  interface.html  make_gom_xref  parser.html  usage.html
doc/images/: Makefile.am  Makefile.in
gedcom/: Makefile.in  age.c  age.h  buffer.h  compat.c  compat.h  date.c  date.h  encoding.c  gedcom.tab.h  gedcom.y  gedcom_1byte.lex  gedcom_date.tabgen.h  gedcom_hilo.lex  gedcom_internal.h  gedcom_lohi.lex  interface.c  lex.gedcom_hilo_.c  message.c  tag_data.h  tag_names.h  write.c
gedcom-parse-0.90.0/: NEWS  acinclude.m4
gedcom-parse-0.90.0/data/: Makefile.in  gedcom.enc
gedcom-parse-0.90.0/doc/: Makefile.am  Makefile.in  encoding.html  index.html.in  links.html
gedcom-parse-0.90.0/gedcom/: Makefile.am  buffer.c  encoding.h  encoding_state.h  gedcom.tab.c  gedcom_date.lex  gedcom_date.tab.c  gedcom_date.y  gedcom_lex_common.c  interface.h  lex.gedcom_1byte_.c  lex.gedcom_date_.c  lex.gedcom_lohi_.c  multilex.c  multilex.h  process_tags  xref.c  xref.h
gedcom-parse-0.90.0/gom/: association.h  change_date.c  family_link.h  func_template.h  header.h  individual.c  individual.h  lds_event.c  lds_event.h  multimedia.c  multimedia.h  note_sub.h  personal_name.c  repository.h  source_citation.h  source_event.c  (+5 more)
gedcom-parse-0.90.0/iconv/glibc/: Makefile.am  Makefile.in
gedcom-parse-0.90.0/m4/: Makefile.am  Makefile.in  gedcom.m4
gom/: Makefile.am  Makefile.in  address.c  address.h  association.c  change_date.h  event.c  event.h  family.c  family.h  family_link.c  gom.c  gom_internal.h  gom_modify.c  header.c  multimedia_link.c  multimedia_link.h  note.c  note.h  note_sub.c  personal_name.h  place.c  place.h  repository.c  source.c  source.h  source_citation.c  source_description.c  source_description.h  submission.h  submitter.c  submitter.h  user_rec.c
iconv/: ANSI_Z39.47-tables.h  Makefile.am  Makefile.in
iconv/libiconv/: Makefile.am
include/: Makefile.am  gedcom-tags.h  gedcom.h  gom.h
t/: Makefile.am
t/input/: Makefile.am  Makefile.in
t/output/: Makefile.am  Makefile.in
t/src/: Makefile.am  dump_gom.c  dump_gom.h  gomtest.c  output.c  pathtest.c  portability.h  standalone.c  test_gom  test_intl  test_prologue.sh  test_script  test_updategom  test_writegom  testintl.c  update_gom.c
utf8/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  utf8-locale.c  utf8tools.h
(+28 files in other folders)
