## Process this file with automake to produce Makefile.in
# $Id: Makefile.am,v 1.2 2002/01/12 16:03:09 verthezp Exp $
# $Name: R0_90_0 $

DOC_FILES = schema.png fromhex.png tohex.png
EXTRA_DIST = $(DOC_FILES) schema.obj fromhex.obj tohex.obj
docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/images

doc_DATA = $(DOC_FILES)



